[package]
name = "aws-auth-payload"
version = "0.1.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
failure =  { version = "0.1.3", features=["backtrace"] }
failure_derive = "0.1.3"
futures = "0.1"
lazy_static = "1.3.0"
log = "0.4"
rusoto_core = "0.39.0"
rusoto_sts = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.5.1"

[dev-dependencies]
rusoto_mock = "0.39.0"
serde_json = "1.0"
url = "1.7.2"
