[package]
name = "aws-auth-payload"
version = "0.2.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/lawliet89/aws-auth-payload"
description = "This library provides methods for you to use your AWS credentials to generate a pre-signed request to AWS API."

[dependencies]
base64 = "0.11.0"
failure =  { version = "0.1.3", features=["backtrace"] }
failure_derive = "0.1.3"
lazy_static = "1.3.0"
log = "0.4"
rusoto_core = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6.1"

[dev-dependencies]
env_logger = "0.7.1"
rusoto_mock = "0.44"
serde_json = "1.0"
tokio = { version = "0.2", features=["macros", "rt-threaded"] }
url = "2.1.0"
